Update translation - 103449402 (#3460) 3635d747c83a3167c98c70c518a0ced2445bbc4f

--- a/ar/industry-guidance/index.html
+++ b/ar/industry-guidance/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>التوجيهات الصناعية لخفض المخاطر</h1>
           
-            <p class="small-text">آخر التحديثات&nbsp;1:31 م الساعة 23 فبراير 2021</p>
+            <p class="small-text">آخر التحديثات&nbsp;4:07 م الساعة 24 فبراير 2021</p>
           
         </div>
       </div>
@@ -1497,7 +1497,7 @@
 <p><strong>الغناء والإنشاد والعزف على آلات النفخ</strong></p>
 <p>الغناء والإنشاد والعزف على آلات النفخ والأنشطة المماثلة وفقًا للقيود الواردة أدناه. العمال أو المتطوعين الذين يقدمون موسيقى مصحوبة بالغناء باستخدام مختلف الأدوات الموسيقية أو أي نوع آخر من أنواع الموسيقى كخدمة أو في الحفلات ولكنهم يجلسون أو يقفون بشكل منفصل عن الزوار أو المصلين "المؤدين". وقد تتطلب إرشادات العروض الحية المقبلة إدخال تعديلات إضافية أو بديلة على العروض. </p>
 <p>الأماكن الخارجية المفتوحة</p>
-<ul><li>إن المؤدين الذين يغنون أو ينشدون أو يعزفون على إحدى أدوات النفخ أو يشاركون في أنشطة مماثلة يجب عليهم الحفاظ على التباعد الجسدي مسافة 6 أقدام من المتفرجين وغيرهم من فناني الأداء إذا كانوا يرتدون أغطية للوجه أو 12 قدمًا إذا كانوا لا يرتدون أغطية للوجه.   </li><li>وقد يغني أفراد الجمهور أو جماعة المصلين أو ينشدون ما داموا يرتدون أغطية الوجه ويحافظون على التباعد الجسدي.</li></ul>
+<ul><li>إن المؤدين الذين يغنون أو ينشدون أو يعزفون على إحدى أدوات النفخ أو يشاركون في أنشطة مماثلة يجب عليهم الحفاظ على التباعد الجسدي مسافة 6 أقدام من المتفرجين وغيرهم من فناني الأداء إذا كانوا يرتدون أغطية للوجه أو 12 قدمًا إذا كانوا لا يرتدون أغطية للوجه.  </li><li>وقد يغني أفراد الجمهور أو جماعة المصلين أو ينشدون ما داموا يرتدون أغطية الوجه ويحافظون على التباعد الجسدي.</li></ul>
 <p>الفئة الواسعة الانتشار (البنفسجي)</p>
 <ul><li>يجب على المؤدين الغناء أو الترنيم أو العزف على إحدى آلات النفخ أو الانخراط في أنشطة مماثلة في الأماكن المغلقة ارتداء أغطية الوجه في جميع الأوقات. </li><li>يجب على المؤدين الحفاظ على مسافة لا تقل عن 12 قدمًا من غيرهم من المؤدين الآخرين و 24 قدمًا من الزوار أو المصلين.  </li><li>خلال أداء إحدى الصلوات أو الطقوس الدينية أو الاحتفالات بحضور الجمهور، لا يجوز لأكثر من 10 فنانين الغناء أو الإنشاد أو العزف على آلات النفخ أو المشاركة في أنشطة مماثلة.  </li><li>ويُحتسب المؤدون ضمن حدود سعة الإشغال. </li><li>يُنصح المؤدون بشدة بإجراء فحوصات PCR الفيروسية والحصول على نتيجة سلبية خلال 72 ساعة قبل أداء طقوسهم الدينية والصلوات.</li><li>وينبغي لدور العبادة أن تحسن التهوية قدر الإمكان.  </li></ul>
 <p>الفئات الكبيرة (حمراء) والمتوسطة (برتقالية) والأدنى (صفراء) </p>
@@ -1902,7 +1902,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4 id="retail"><span class="ca-gov-icon-payment-card"></span> البيع بالتجزئة – تم التحديث في 20 أكتوبر 2020</h4>
+            <h4 id="retail"><span class="ca-gov-icon-payment-card"></span> البيع بالتجزئة - تم تحديثها في 24 فبراير 2021</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true">
@@ -1911,8 +1911,8 @@
 <p>الفئة الواسعة الانتشار (البنفسجي)</p>
 <ul><li>يمكن الافتتاح مع إجراء تعديلات</li><li>يجب أن تقتصر متاجر البيع بالتجزئة على 25٪ من سعتها</li><li>يجب أن تقتصر محلات البقالة على 50٪ من سعتها</li></ul>
 <p>الفئة الكبيرة (أحمر)</p>
-<ul><li>يمكن الافتتاح مع إجراء تعديلات</li><li>يجب أن تقتصر متاجر البيع بالتجزئة على 50٪ من سعتها</li></ul>
-<p>الفئة المتوسطة (برتقالي): الأماكن الداخلية مع إجراء بعض التعديلات</p>
+<ul><li>يمكن الافتتاح مع إجراء تعديلات</li><li>يجب أن تقتصر متاجر البيع بالتجزئة على 50٪ من سعتها</li><li>يمكن لمتاجر البقالة أن تعمل بكامل طاقتها</li></ul>
+<p>الفئة المتوسطة (برتقالي): الأماكن الداخلية تفتح مع إجراء بعض التعديلات</p>
 <p>الفئة الأدنى (أصفر): الأماكن الداخلية مع إجراء تعديلات</p>
 <p>اتبع هذه <a href="https://files.covid19.ca.gov/pdf/guidance-retail--ar.pdf">التوجيهات الخاصة بتجار البيع بالتجزئة</a> لتوفير بيئة أكثر أمانًا للموظفين والزبائن. راجع التوجيهات، وقم بإعداد خطة، وانشر <a href="https://files.covid19.ca.gov/pdf/checklist-retail--ar.pdf">قائمة مراجعة لأماكن البيع بالتجزئة</a> في مكان عملك لكي تبين للعملاء والموظفين أنك قد قللت من الخطر وأنك جاهز لاستئناف العمل.</p>
 <p>يمكن لمحلات البيع بالتجزئة والمكتبات إعادة فتح أبوابها فضلاً عن قطاعات التصنيع وقطاعات الخدمات اللوجستية التي تدعم قطاع البيع بالتجزئة. <br><br>ينبغي للمكتبات اتباع <a href="https://files.covid19.ca.gov/pdf/guidance-retail--ar.pdf">التوجيه الخاص بأماكن البيع بالتجزئة</a>. أصدرت مكتبة الولاية أيضًا إرشادات توجيهية <a href="https://library.ca.gov/Content/pdf/services/toLibraries/COVIDGuidanceLibraries.pdf">لإعادة فتح المكتبات للخدمات الشخصية</a>. طالع <a href="https://www.library.ca.gov/covid-19">الموقع الإلكتروني لكوفيد-19 من مكتبة الولاية</a> لتعرف على المزيد من المعلومات. اعثر على <a href="https://www.cla-net.org/page/7-1">الموارد المقدمة للمكتبات العامة</a> من جمعية مكتبات كاليفورنيا ومكتبة الولاية.<br><br>ويمكن لدور السينما وسينما السيارات إعادة الفتح مع أخذ مزيد من الاعتبارات في الحسبان. راجع <a href="/ar/industry-guidance/#movie-theaters-entertainment">التوجيهات الخاصة بدور السينما ومراكز الترفيه العائلي</a> للحصول على مزيد من التفاصيل.</p>
