--- a/es/industry-guidance/index.html
+++ b/es/industry-guidance/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Guía para las industrias para reducir riesgos</h1>
           
-            <p class="small-text">Última actualización&nbsp;23 de febrero de 2021 a las 1:31 p. m.</p>
+            <p class="small-text">Última actualización&nbsp;24 de febrero de 2021 a las 4:07 p. m.</p>
           
         </div>
       </div>
@@ -1902,7 +1902,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4 id="retail"><span class="ca-gov-icon-payment-card"></span> Minoristas: actualizado el 20 de octubre de 2020</h4>
+            <h4 id="retail"><span class="ca-gov-icon-payment-card"></span> Industria minorista: actualizado el 24 de febrero de 2021</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true">
@@ -1911,7 +1911,7 @@
 <p>Extendido (morado)</p>
 <ul><li>Abierto con modificaciones.</li><li>La capacidad de la industria minorista debe limitarse al 25 %.</li><li>La capacidad de las tiendas de comestibles debe limitarse al 50 %.</li></ul>
 <p>Sustancial (rojo)</p>
-<ul><li>Abierto con modificaciones.</li><li>La capacidad de la industria minorista debe limitarse al 50 %.</li></ul>
+<ul><li>Abierto con modificaciones.</li><li>La capacidad de la industria minorista debe limitarse al 50 %.</li><li>Las tiendas de comestibles pueden operar a su capacidad máxima.</li></ul>
 <p>Moderado (naranja): en interiores con modificaciones</p>
 <p>Mínimo (amarillo): en interiores con modificaciones</p>
 <p>Siga esta <a href="https://files.covid19.ca.gov/pdf/guidance-retail--es.pdf">guía para minoristas</a> para apoyar un entorno seguro y limpio para los trabajadores y los clientes. Revise la guía, prepare un plan y publique la <a href="https://files.covid19.ca.gov/pdf/checklist-retail--es.pdf">lista de verificación para la industria de minoristas</a> en su lugar de trabajo para mostrar a sus clientes y empleados que ha reducido el riesgo y que está abierto para trabajar.</p>
