--- a/ko/industry-guidance/index.html
+++ b/ko/industry-guidance/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>위험 감소를 위한 업계 지침</h1>
           
-            <p class="small-text">최종 갱신 일자&nbsp;2021년 2월 23일 오후 1:31</p>
+            <p class="small-text">최종 갱신 일자&nbsp;2021년 2월 24일 오후 4:07</p>
           
         </div>
       </div>
@@ -1902,7 +1902,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4 id="retail"><span class="ca-gov-icon-payment-card"></span> 소매업 – 2020년 10월 20일 업데이트</h4>
+            <h4 id="retail"><span class="ca-gov-icon-payment-card"></span> 소매업 – 2021년 2월 24일 업데이트</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true">
@@ -1911,7 +1911,7 @@
 <p>광범위(자주색):</p>
 <ul><li>변경 조치 이행 후 운영 개시</li><li>소매점 수용 가능 인원의 25%로 제한</li><li>식품점 수용 가능 인원의 50%로 제한</li></ul>
 <p>상당(적색):</p>
-<ul><li>변경 조치 이행 후 운영 개시</li><li>소매점 수용 가능 인원의 50%로 제한</li></ul>
+<ul><li>변경 조치 이행 후 운영 개시</li><li>소매점 수용 가능 인원의 50%로 제한</li><li>식료품점은 수용 가능 인원이 허용하는 한도에서 운영 가능</li></ul>
 <p>완화(오렌지색): 변경 조치 이행 후 실내 운영 개시</p>
 <p>최소(노란색): 변경 조치 이행 후 실내 운영 개시</p>
 <p>본 <a href="https://files.covid19.ca.gov/pdf/guidance-retail--ko.pdf">소매업체에 관한 지침</a>을 준수하여 근로자와 고객에게 안전하고 청결한 환경을 마련하십시오. 지침을 검토하여 계획을 준비하고 <a href="https://files.covid19.ca.gov/pdf/checklist-retail--ko.pdf">소매업을 위한 체크리스트</a>를 사업장에 게시하여 고객과 직원들에게 귀하의 사업장이 감염 위험을 줄이는 작업을 완료했으며 사업을 재개했음을 알리십시오.</p>
