--- a/vi/industry-guidance/index.html
+++ b/vi/industry-guidance/index.html
@@ -150,7 +150,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Hướng dẫn dành cho từng ngành nghề để giảm nhẹ rủi ro</h1>
           
-            <p class="small-text">Cập nhật mới nhất&nbsp;23 tháng 2, 2021 lúc 13:31</p>
+            <p class="small-text">Cập nhật mới nhất&nbsp;24 tháng 2, 2021 lúc 16:07</p>
           
         </div>
       </div>
@@ -1904,7 +1904,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4 id="retail"><span class="ca-gov-icon-payment-card"></span> Hoạt động bán lẻ – cập nhật ngày 20 tháng 10 năm 2020</h4>
+            <h4 id="retail"><span class="ca-gov-icon-payment-card"></span> Hoạt động bán lẻ – cập nhật ngày 24 tháng 2 năm 2021</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true">
@@ -1913,8 +1913,8 @@
 <p>Lan rộng (màu tím)</p>
 <ul><li>Mở cửa với điều chỉnh sửa đổi</li><li>Phải giới hạn công suất ở 25%</li><li>Cửa hàng tạp hóa  giới hạn ở 50%</li></ul>
 <p>Quan trọng (màu đỏ)</p>
-<ul><li>Mở cửa với điều chỉnh sửa đổi</li><li>Phải giới hạn công suất của hoạt động bán lẻ ở 50%</li></ul>
-<p>Vừa phải (màu cam): Trong nhà với điều chỉnh sửa đổi</p>
+<ul><li>Mở cửa với điều chỉnh sửa đổi</li><li>Phải giới hạn công suất của hoạt động bán lẻ ở mức 50%</li><li>Cửa hàng tạp hóa có thể hoạt động hết công suất</li></ul>
+<p>Vừa phải (màu cam): Trong nhà có điều chỉnh</p>
 <p>Tối thiểu (màu vàng): Trong nhà với điều chỉnh sửa đổi</p>
 <p>Tuân thủ <a href="https://files.covid19.ca.gov/pdf/guidance-retail--vi.pdf">hướng dẫn này dành cho các cửa hàng bán lẻ</a> để hỗ trợ đảm bảo môi trường sạch sẽ, an toàn cho người lao động và khách hàng. Xem xét hướng dẫn, lập kế hoạch và đăng tải <a href="https://files.covid19.ca.gov/pdf/checklist-retail--vi.pdf">danh mục kiểm tra dành cho các đại lý bán lẻ</a> tại nơi làm việc của quý vị để cho khách hàng và nhân viên thấy quý vị đã giảm thiểu được nguy cơ và sẵn sàng mở cửa kinh doanh trở lại.</p>
 <p>Các cửa hàng bán lẻ và thư viện có thể mở cửa trở lại, cùng với các ngành sản xuất và kho vận hỗ trợ bán lẻ. <br><br>Các thư viện phải tuân thủ <a href="https://files.covid19.ca.gov/pdf/guidance-retail--vi.pdf">hướng dẫn dành cho cửa hàng bán lẻ</a>. Thư Viện Tiểu Bang cũng đã ban bố hướng dẫn <a href="https://library.ca.gov/Content/pdf/services/toLibraries/COVIDGuidanceLibraries.pdf">mở cửa thư viện trở lại để phục vụ các dịch vụ trực tiếp</a>. Hãy xem <a href="https://www.library.ca.gov/covid-19">trang web về COVID-19 của Thư Viện Tiểu Bang</a> để biết thêm thông tin. Hãy tìm <a href="https://www.cla-net.org/page/7-1">các nguồn lực cho thư viện công</a> của Hiệp Hội Thư Viện California và Thư Viện Tiểu Bang.<br><br>Các rạp chiếu phim phục vụ khách ngồi trong xe và vào xem trực tiếp có thể mở cửa lại khi có thêm những cân nhắc. Xem <a href="/vi/industry-guidance/#movie-theaters-entertainment">hướng dẫn dành cho rạp chiếu phim và trung tâm giải trí gia đình</a> để biết chi tiết.</p>
