--- a/zh-hans/industry-guidance/index.html
+++ b/zh-hans/industry-guidance/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>有助于降低风险的行业指引</h1>
           
-            <p class="small-text">最后更新时间&nbsp;2021年2月23日, 下午1:31</p>
+            <p class="small-text">最后更新时间&nbsp;2021年2月24日, 下午4:07</p>
           
         </div>
       </div>
@@ -1902,7 +1902,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4 id="retail"><span class="ca-gov-icon-payment-card"></span> 零售 — 更新于2020年10月20日</h4>
+            <h4 id="retail"><span class="ca-gov-icon-payment-card"></span> 零售店 – 更新于2021年2月24日</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true">
@@ -1911,7 +1911,7 @@
 <p>广泛传播（紫色）：</p>
 <ul><li>经调整后开放</li><li>零售店容纳量必须限制在25%</li><li>杂货店容纳量必须限制在50%</li></ul>
 <p>重度（红色）</p>
-<ul><li>经调整后开放</li><li>零售店容纳量必须限制在50%</li></ul>
+<ul><li>经调整后开放</li><li>零售店容纳量必须限制在50%</li><li>杂货店可以正常容纳量运营</li></ul>
 <p>中度（橙色）：经调整后在室内开放</p>
 <p>最小（黄色）：经调整后在室内开放</p>
 <p>遵循此<a href="https://files.covid19.ca.gov/pdf/guidance-retail--zh-hans.pdf">零售店指引</a>，为员工和客户提供安全干净的环境。查看该指引，制定计划并在工作场所发布<a href="https://files.covid19.ca.gov/pdf/checklist-retail--zh-hans.pdf">零售业清单</a>，向客户和员工表明您已降低了风险并重新开展业务。</p>
