--- a/zh-hant/industry-guidance/index.html
+++ b/zh-hant/industry-guidance/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>有助於降低風險的行業指引</h1>
           
-            <p class="small-text">最近更新&nbsp;2021年2月23日, 下午1:31</p>
+            <p class="small-text">最近更新&nbsp;2021年2月24日, 下午4:07</p>
           
         </div>
       </div>
@@ -1902,7 +1902,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4 id="retail"><span class="ca-gov-icon-payment-card"></span> 零售 — 更新於2020年10月20日</h4>
+            <h4 id="retail"><span class="ca-gov-icon-payment-card"></span> 零售 — 更新於2021年2月24日</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true">
@@ -1911,7 +1911,7 @@
 <p>廣泛傳播（紫色）</p>
 <ul><li>經調整後開放</li><li>零售店的容納率必須限制在25%</li><li>雜貨店的容納率必須限制在50%</li></ul>
 <p>重度（紅色）</p>
-<ul><li>經調整後開放</li><li>零售店的容納率必須限制在50%</li></ul>
+<ul><li>經調整後開放</li><li>零售店的容納率必須限制在50%</li><li>雜貨店可以正常容納率營運</li></ul>
 <p>中度（橙色）：經調整後在室內開放</p>
 <p>最小（黃色）：經調整後在室內開放</p>
 <p>遵循此<a href="https://files.covid19.ca.gov/pdf/guidance-retail--zh-hant.pdf">零售店指引</a>，為員工及顧客提供安全乾淨的環境。查看指引，制定計劃，並在您的工作場所張貼<a href="https://files.covid19.ca.gov/pdf/checklist-retail--zh-hant.pdf">零售店清單</a>，向顧客和員工表明風險已降低並開始營業。</p>
