--- a/tl/industry-guidance/index.html
+++ b/tl/industry-guidance/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Gabay sa industriya sa pagpapababa ng panganib</h1>
           
-            <p class="small-text">Huling na-update&nbsp;Pebrero 23, 2021 sa 1:31 PM</p>
+            <p class="small-text">Huling na-update&nbsp;Pebrero 24, 2021 sa 4:07 PM</p>
           
         </div>
       </div>
@@ -1902,7 +1902,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4 id="retail"><span class="ca-gov-icon-payment-card"></span> Retail – na-update noong Oktubre 20, 2020</h4>
+            <h4 id="retail"><span class="ca-gov-icon-payment-card"></span> Retail – na-update noong Pebrero 24, 2021</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true">
@@ -1911,7 +1911,7 @@
 <p>Widespread (purple):</p>
 <ul><li>Nakabukas nang may mga modipikasyon</li><li>Dapat ay limitado sa 25% ang kapasidad</li><li>Dapat ay limitado sa 25% ang kapasidad ng grocery store</li></ul>
 <p>Substantial (pula)</p>
-<ul><li>Nakabukas nang may mga modipikasyon</li><li>Dapat ay limitado sa 25% ang kapasidad ng retail</li></ul>
+<ul><li>Nakabukas nang may mga modipikasyon</li><li>Dapat ay limitado sa 50% ang kapasidad ng retail</li><li>Puwedeng magpatakbo ang mga grocery sa ganap na kapasidad</li></ul>
 <p>Moderate (orange): Nakabukas nang may mga modipikasyon</p>
 <p>Minimal (dilaw): Indoor nang may mga modipikasyon</p>
 <p>Sundin ang <a href="https://files.covid19.ca.gov/pdf/guidance-retail--tl.pdf">gabay na ito para sa mga sinehan</a> para makagawa ng ligtas na lugar para sa mga manggagawa at customer. Suriin ang gabay, maghanda ng plano, at ipaskil ang <a href="https://files.covid19.ca.gov/pdf/checklist-retail--tl.pdf">checklist para sa retail</a> sa iyong lugar ng trabaho upang ipakita sa mga customer at empleyado na binawasan mo ang panganib at bukas ka na upang magnegosyo.</p>
