--- a/es/index.html
+++ b/es/index.html
@@ -253,12 +253,12 @@
 						<div class="col-md-6 px-10px">
 							<div class="bg-blue bd-rounded-10 py-2 px-3 text-center mt-3 summary-box">
 							<div class="h5 text-uppercase color-white line-height-1-2 mt-1">Vaccines Administered</div>
-								<div id="total-vaccines-number" class="text-white font-size-1-2em my-4"><strong>8,232,420</strong> <span class="text-300">total</span></div>
+								<div id="total-vaccines-number" class="text-white font-size-1-2em my-4"><strong>8,243,711</strong> <span class="text-300">total</span></div>
 							</div>
 						</div>
 					</div>
 					<div class="text-sm text-center text-300 ptop-12px">
-						Details about this data are available in the <a class="hero-stats-footer-slink" href="/state-dashboard/">state dashboard</a>. Deaths reported on February 25, 2021, include a backlog of 806 deaths from Los Angeles County that were not initially recorded as COVID-19 deaths. The majority of these deaths occurred between December 3, 2020, and February 3, 2021.
+						Details about this data are available in the <a class="hero-stats-footer-slink" href="/state-dashboard/">state dashboard</a>.
 					</div><!--
 <<p class="text-center text-sm text-300 mt-4">Rates of cases and tests are based on a 7 day average with a 7 day lag.</p>
 <p class="text-center text-sm text-300 mt-3">Rates of deaths are based on a 7 day average with a 21 day lag due to delays in reporting. 
