--- a/es/latest-news/index.html
+++ b/es/latest-news/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Últimas noticias sobre COVID-19</h1>
           
-            <p class="small-text">Última actualización&nbsp;26 de febrero de 2021 a las 10:47 a. m.</p>
+            <p class="small-text">Última actualización&nbsp;26 de febrero de 2021 a las 12:01 p. m.</p>
           
         </div>
       </div>
