--- a/contracts/index.html
+++ b/contracts/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Released COVID-19 Response Contracts</h1>
           
-            <p class="small-text">Last updated&nbsp;February 23, 2021 at 2:44 PM</p>
+            <p class="small-text">Last updated&nbsp;February 26, 2021 at 8:56 PM</p>
           
         </div>
       </div>
@@ -475,7 +475,7 @@
                 </button>
                 <div class="card-container" aria-hidden="true">
                   <div class="card-body">
-            <ul><li>Kaiser Foundation Health Plan, Inc. and Kaiser Foundation Hospitals (Letter of Intent): <a href="https://files.covid19.ca.gov/pdf/Kaiser-foundation-GovOps-letter-of-intent.pdf">Kaiser-foundation-GovOps-letter-of-intent (PDF)</a></li></ul>
+            <ul><li>Kaiser Foundation Health Plan, Inc. and Kaiser Foundation Hospitals (Memorandum Of Understanding): <a href="https://files.covid19.ca.gov/pdf/Kaiser-foundation-GovOps-MOU.pdf">Kaiser-foundation-GovOps-MOU (PDF)</a></li><li>Kaiser Foundation Health Plan, Inc. and Kaiser Foundation Hospitals (Letter of Intent): <a href="https://files.covid19.ca.gov/pdf/Kaiser-foundation-GovOps-letter-of-intent.pdf">Kaiser-foundation-GovOps-letter-of-intent (PDF)</a></li></ul>
 <ul><li>Kaiser Foundation Hospitals, Dignity Health, Los Angeles County Department of Health: <a href="https://files.covid19.ca.gov/pdf/Kaiser-dignity-LA-county-CDPH.pdf">Kaiser-dignity-LA-county-CDPH (PDF)</a></li></ul>
 <ul><li>Leland Stanford Junior University (Board of Trustees): <a href="https://files.covid19.ca.gov/pdf/Leland-stanford-junior-university-CDT.pdf">Leland-stanford-junior-university-CDT (PDF)</a></li></ul>
 <ul><li>LF Staffing Services, Inc: <a href="https://files.covid19.ca.gov/pdf/LF-staffing-services-inc-DSH.pdf">LF-staffing-services-inc-DSH (PDF)</a></li></ul>
