--- a/tl/data-and-tools/index.html
+++ b/tl/data-and-tools/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Mga datos at tool</h1>
           
-            <p class="small-text">Huling na-update&nbsp;Pebrero 26, 2021 sa 8:58 PM</p>
+            <p class="small-text">Huling na-update&nbsp;Pebrero 27, 2021 sa 10:47 AM</p>
           
         </div>
       </div>
