Update page - vaccines.html aeac6dc1d4147d3b86161227e6b313e0d692d74a

--- a/vaccines/index.html
+++ b/vaccines/index.html
@@ -150,7 +150,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Vaccines</h1>
           
-            <p class="small-text">Last updated&nbsp;February 27, 2021 at 5:27 PM</p>
+            <p class="small-text">Last updated&nbsp;February 28, 2021 at 12:59 PM</p>
           
         </div>
       </div>
@@ -204,7 +204,7 @@
 
 
 
-<div style="display:none;"><!-- Register --></div>
+<div style="display:none;"><!-- Register eligibilty My Turn--></div>
 
 
 
@@ -212,7 +212,7 @@
 
 
 
-<h3>Verify your eligibility</h3>
+<h3 class="js-qa js-qa-answer">Verify your eligibility</h3>
 
 
 
