--- a/pages/wordpress-posts/v2-state-dashboard.html
+++ b/pages/wordpress-posts/v2-state-dashboard.html
@@ -482,6 +482,11 @@ data2.icu.ICU_SUSPECTED_COVID_PATIENTS_DAILY) | formatNumber(tags)-%}
                       <li data-label="chartTitle">Confirmed cases by gender in California</li>
                       <li data-label="chartLegend1">% of confirmed cases</li>
                       <li data-label="chartLegend2">% of state population</li>
+                      <li data-label="chartTooltip">
+                        <div>
+                        <category> account for <metric-value> of confirmed <span class="highlight-data">cases</span> and <metric-baseline-value> of the total California population.
+                        </div>
+                      </li>
                     </ul>
                   </cagov-chart-dashboard-groups-gender-cases>                
                 </div>
@@ -491,6 +496,11 @@ data2.icu.ICU_SUSPECTED_COVID_PATIENTS_DAILY) | formatNumber(tags)-%}
                       <li data-label="chartTitle">Confirmed deaths by gender in California</li>
                       <li data-label="chartLegend1">% of confirmed deaths</li>
                       <li data-label="chartLegend2">% of state population</li>
+                      <li data-label="chartTooltip">
+                        <div>
+                        <category> account for <metric-value> of confirmed <span class="highlight-data">deaths</span> and <metric-baseline-value> of the total California population.
+                        </div>
+                      </li>
                     </ul>
                   </cagov-chart-dashboard-groups-gender-deaths>               
                 </div> 
@@ -513,6 +523,11 @@ data2.icu.ICU_SUSPECTED_COVID_PATIENTS_DAILY) | formatNumber(tags)-%}
                       <li data-label="chartTitle">Confirmed cases by age in California</li>
                       <li data-label="chartLegend1">% of confirmed cases</li>
                       <li data-label="chartLegend2">% of state population</li>
+                      <li data-label="chartTooltip">
+                        <div>
+                        The <category> age group accounts for <metric-value> of confirmed <span class="highlight-data">cases</span> and <metric-baseline-value> of the total California population.
+                        </div>
+                      </li>
                     </ul>
                   </cagov-chart-dashboard-groups-age-cases>                
                 </div>
@@ -522,6 +537,11 @@ data2.icu.ICU_SUSPECTED_COVID_PATIENTS_DAILY) | formatNumber(tags)-%}
                       <li data-label="chartTitle">Confirmed deaths by age in California</li>
                       <li data-label="chartLegend1">% of confirmed deaths</li>
                       <li data-label="chartLegend2">% of state population</li>
+                      <li data-label="chartTooltip">
+                        <div>
+                        The <category> age group accounts for <metric-value> of confirmed <span class="highlight-data">deaths</span> and <metric-baseline-value> of the total California population.
+                        </div>
+                      </li>
                     </ul>
                   </cagov-chart-dashboard-groups-age-deaths>               
                 </div> 
@@ -546,6 +566,11 @@ data2.icu.ICU_SUSPECTED_COVID_PATIENTS_DAILY) | formatNumber(tags)-%}
                       <li data-label="chartTitle">Confirmed cases by race and ethnicity in California</li>
                       <li data-label="chartLegend1">% of confirmed cases</li>
                       <li data-label="chartLegend2">% of state population</li>
+                      <li data-label="chartTooltip">
+                        <div>
+                        <category> people account for <metric-value> of confirmed <span class="highlight-data">cases</span> and <metric-baseline-value> of the total California population.
+                        </div>
+                      </li>
                     </ul>
                   </cagov-chart-dashboard-groups-race-ethnicity-cases>                
                 </div>
@@ -555,6 +580,11 @@ data2.icu.ICU_SUSPECTED_COVID_PATIENTS_DAILY) | formatNumber(tags)-%}
                       <li data-label="chartTitle">Confirmed deaths by race and ethnicity in California</li>
                       <li data-label="chartLegend1">% of confirmed deaths</li>
                       <li data-label="chartLegend2">% of state population</li>
+                      <li data-label="chartTooltip">
+                        <div>
+                        <category >people account for <metric-value> of confirmed <span class="highlight-data">deaths</span> and <metric-baseline-value> of the total California population.
+                        </div>
+                      </li>
                     </ul>
                   </cagov-chart-dashboard-groups-race-ethnicity-deaths>               
                 </div> 
