--- a/pages/translated-posts/new-vi.html
+++ b/pages/translated-posts/new-vi.html
@@ -1,5 +1,5 @@
-<h2 class="h3 text-primary m-0 pt-2 pb-3"><strong><strong>Hướng dẫn về các môn thể thao dành cho người lớn và thanh thiếu niên mới vạch ra lộ trình trở lại thi đấu</strong></strong></h2>
+<h2 class="h3 text-primary m-0 pt-2 pb-3"><strong><strong><strong>California đẩy nhanh việc tiêm chủng cho các nhân viên giáo dục và nhân viên chăm sóc trẻ em</strong></strong></strong></h2>
 
 
 
-<p>Sở Y Tế Công Cộng California đã ban hành hướng dẫn mới về các môn thể thao giải trí dành cho người lớn và thanh thiếu niên sẽ có hiệu lực từ ngày 26 tháng 2. Hướng dẫn này sẽ cho biết các môn thể thao nào sẽ được phép chơi trở lại ở cấp độ nào, dựa trên mức độ tiếp xúc và nguy cơ lây truyền vi-rút corona.</p>    <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/outdoor-indoor-recreational-sports.aspx" class="action-link pt-3 pb-3 px-4">Đọc hướng dẫn</a> 
+<p>Tiểu bang sẽ dành 10% vắc-xin cho nhân viên trường từ khối mầm non tới lớp 12 và nhân viên chăm sóc trẻ em bắt đầu từ ngày 1 tháng 3. Những nhân viên này sẽ nhận được mã đặc biệt cho phép họ đặt lịch hẹn gấp qua <a href="https://myturn.ca.gov/">myturn.ca.gov</a>.</p>    <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/K-12_Vaccines_Overview.pdf?TSPD_101_R0=087ed344cfab2000c125e650773b596a9dc101ce13a20af74f4276acc098302b1a6dab6b7e713d16083cbf02181430002a6def99f459d421acae673be525856e7820fe2f89b216d77a02fd96708937a74e56bbd070a2b36156ba0f7828e21ba2" class="action-link pt-3 pb-3 px-4">Xem kế hoạch phân bổ</a> 
