--- a/pages/translated-posts/new-zh-hant.html
+++ b/pages/translated-posts/new-zh-hant.html
@@ -1,5 +1,5 @@
-<h2 class="h3 text-primary m-0 pt-2 pb-3"><strong><strong>新的青少年及成人體育運動指引概述了可以恢復進行的運動項目</strong></strong></h2>
+<h2 class="h3 text-primary m-0 pt-2 pb-3"><strong><strong><strong>加州正在加快教育和托兒工作者的疫苗接種進度</strong></strong></strong></h2>
 
 
 
-<p>加州公共衛生局針對青少年及成人休閒運動發佈了新的指引，此指引將於2月26日生效。該指引基於接觸程度和傳播新型冠狀病毒的風險等級，說明了各個等級中允許恢復進行的運動項目。</p><a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/outdoor-indoor-recreational-sports.aspx" class="action-link pt-3 pb-3 px-4">閱讀該指引</a> 
+<p>自3月1日起，州府將分配10%的疫苗給K-12學校教職工和托兒工作者。這些工作者將獲得專用碼，憑藉此碼，其可以在<a href="https://myturn.ca.gov/">myturn.ca.gov</a>網站更快地安排預約。</p><a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/K-12_Vaccines_Overview.pdf?TSPD_101_R0=087ed344cfab2000c125e650773b596a9dc101ce13a20af74f4276acc098302b1a6dab6b7e713d16083cbf02181430002a6def99f459d421acae673be525856e7820fe2f89b216d77a02fd96708937a74e56bbd070a2b36156ba0f7828e21ba2" class="action-link pt-3 pb-3 px-4">查看分配計劃</a> 
