--- a/pages/translated-posts/new-es.html
+++ b/pages/translated-posts/new-es.html
@@ -1,5 +1,5 @@
-<h2 class="h3 text-primary m-0 pt-2 pb-3"><strong><strong>La nueva guía para deportes para jóvenes y adultos esboza un regreso a la competencia</strong></strong></h2>
+<h2 class="h3 text-primary m-0 pt-2 pb-3"><strong><strong><strong>California está acelerando las vacunas para los trabajadores de la educación y el cuidado infantil</strong></strong></strong></h2>
 
 
 
-<p>El Departamento de Salud Pública de California publicó una nueva guía para deportes recreativos para jóvenes y adultos que entrará en vigor el 26 de febrero. Muestra qué deportes se podrán volver a jugar y en qué niveles, según el nivel de contacto y el riesgo de transmisión del coronavirus.</p>    <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/outdoor-indoor-recreational-sports.aspx" class="action-link pt-3 pb-3 px-4">Lea la guía.</a> 
+<p>El estado dedicará el 10 % de las vacunas al personal de las escuelas de jardín de niños a 12.º grado (K-12) y a los trabajadores de cuidado infantil a partir del 1.º de marzo. Estos trabajadores recibirán códigos especiales que les permitirán programar citas urgentes a través de <a href="https://myturn.ca.gov/">myturn.ca.gov</a>.</p>    <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/K-12_Vaccines_Overview.pdf?TSPD_101_R0=087ed344cfab2000c125e650773b596a9dc101ce13a20af74f4276acc098302b1a6dab6b7e713d16083cbf02181430002a6def99f459d421acae673be525856e7820fe2f89b216d77a02fd96708937a74e56bbd070a2b36156ba0f7828e21ba2" class="action-link pt-3 pb-3 px-4">Consulte el plan de asignación.</a> 
