--- a/pages/translated-posts/new-ko.html
+++ b/pages/translated-posts/new-ko.html
@@ -1,5 +1,5 @@
-<h2 class="h3 text-primary m-0 pt-2 pb-3"><strong><strong>새로운 청소년 및 성인 스포츠 지침은 시합 재개에 대한 개요를 나타냅니다</strong></strong></h2>
+<h2 class="h3 text-primary m-0 pt-2 pb-3"><strong><strong><strong>캘리포니아 주 정부의 교직자와 보육 서비스 제공자에 대한 백신 접종 촉진 노력</strong></strong></strong></h2>
 
 
 
-<p>캘리포니아 공중 보건부(California Department of Public Health)는 2월 26일 자로 시행되는 청소년 및 성인 레크리에이션 스포츠에 대한 새로운 지침을 발표하였습니다. 이를 통해 코로나바이러스 접촉자와 전파 위험 수준에 근거하여 단계 별로 어떤 스포츠를 할 수 있는지를 확인할 수 있습니다.</p>    <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/outdoor-indoor-recreational-sports.aspx" class="action-link pt-3 pb-3 px-4">해당 지침 확인</a> 
+<p>주 정부는 3월 1일 부터 백신 물량의 10%를 K-12 교직원 및 보육 관련 근로자에게 배정할 예정입니다. 해당 근로자는 제공받는 특별 코드를 통해 <a href="https://myturn.ca.gov/">myturn.ca.gov</a>에서 신속하게 예약을 잡을 수 있습니다.</p>    <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/K-12_Vaccines_Overview.pdf?TSPD_101_R0=087ed344cfab2000c125e650773b596a9dc101ce13a20af74f4276acc098302b1a6dab6b7e713d16083cbf02181430002a6def99f459d421acae673be525856e7820fe2f89b216d77a02fd96708937a74e56bbd070a2b36156ba0f7828e21ba2" class="action-link pt-3 pb-3 px-4">배분 방안 참조</a> 
