--- a/pages/translated-posts/new-zh-hans.html
+++ b/pages/translated-posts/new-zh-hans.html
@@ -1,5 +1,5 @@
-<h2 class="h3 text-primary m-0 pt-2 pb-3"><strong><strong>新的青少年及成人体育运动指引概述了可以恢复进行的运动项目</strong></strong></h2>
+<h2 class="h3 text-primary m-0 pt-2 pb-3"><strong><strong><strong>加州正在加快教育和托儿工作者的疫苗接种进度</strong></strong></strong></h2>
 
 
 
-<p>加州公共卫生局针对青少年及成人休闲运动发布了新的指引，此指引将于2月26日生效。该指引基于接触程度和传播新型冠状病毒的风险等级，说明了各个等级中允许恢复进行的运动项目。</p><a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/outdoor-indoor-recreational-sports.aspx" class="action-link pt-3 pb-3 px-4">阅读该指引</a> 
+<p>自3月1日起，州府将分配10%的疫苗给K-12学校教职工和托儿工作者。这些工作者将获得专用码，凭借此码，他们可以在<a href="https://myturn.ca.gov/">myturn.ca.gov</a>网站更快地安排预约。</p><a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/K-12_Vaccines_Overview.pdf?TSPD_101_R0=087ed344cfab2000c125e650773b596a9dc101ce13a20af74f4276acc098302b1a6dab6b7e713d16083cbf02181430002a6def99f459d421acae673be525856e7820fe2f89b216d77a02fd96708937a74e56bbd070a2b36156ba0f7828e21ba2" class="action-link pt-3 pb-3 px-4">查看分配计划</a> 
