Update translation - 103503669 (#3479) c30c956522d71008b7251159f0db643c70f7e76e

--- a/tl/vaccines/index.html
+++ b/tl/vaccines/index.html
@@ -150,7 +150,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Mga Bakuna</h1>
           
-            <p class="small-text">Huling na-update&nbsp;Pebrero 25, 2021 sa 3:05 PM</p>
+            <p class="small-text">Huling na-update&nbsp;Pebrero 25, 2021 sa 3:51 PM</p>
           
         </div>
       </div>
@@ -324,7 +324,7 @@
 
 
 
-<p class="js-qa js-qa-answer">Ang ilang <a href="/tl/get-local-information/">lokal na hurisdiksyon sa kalusugan</a> ay nagbibigay ng mga appointment sa pagpapabakuna nang hiwalay sa MyTurn.</p>
+<p class="js-qa js-qa-answer">Ang ilang <a href="/tl/get-local-information/">lokal na hurisdiksyon sa kalusugan</a> ay nagbibigay ng mga appointment sa pagpapabakuna nang hiwalay sa My Turn.</p>
 
 
 
@@ -846,7 +846,7 @@
                 <div class="card-container" aria-hidden="true">
                   <div class="card-body">
             <p>Sa kasalukuyan, ang mga sangkap na available sa mga bakuna laban sa COVID-19 ay mga mRNA, lipid, salt, sugar, at buffer. Tumutulong ang mga buffer na panatilihin ang stability ng pH solution. Puwedeng iba't iba ang mga sangkap ng bakuna ayon sa manufacturer. Para matuto pa tungkol sa mga sangkap sa mga awtorisadong bakuna laban sa COVID-19, tingnan ang</p>
-<ul><li><a href="https://www.cdc.gov/coronavirus/2019-ncov/vaccines/different-vaccines/Pfizer-BioNTech.html">Impormasyon Tungkol sa bakuna laban sa COVID-19 ng Pfizer-BioNTech</a></li><li><a href="https://www.cdc.gov/coronavirus/2019-ncov/vaccines/different-vaccines/Moderna.html">Impormasyon tungkol sa bakuna laban sa COVID-19 ng Moderna</a></li></ul>
+<ul><li><a href="https://www.cdc.gov/coronavirus/2019-ncov/vaccines/different-vaccines/Pfizer-BioNTech.html">Impormasyon tungkol sa bakuna laban sa COVID-19 ng Pfizer-BioNTech</a></li><li><a href="https://www.cdc.gov/coronavirus/2019-ncov/vaccines/different-vaccines/Moderna.html">Impormasyon tungkol sa bakuna laban sa COVID-19 ng Moderna</a></li></ul>
 
                   </div>
                 </div>
