--- a/zh-hant/vaccines/index.html
+++ b/zh-hant/vaccines/index.html
@@ -150,7 +150,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>疫苗</h1>
           
-            <p class="small-text">最近更新&nbsp;2021年2月25日, 下午3:05</p>
+            <p class="small-text">最近更新&nbsp;2021年2月25日, 下午3:51</p>
           
         </div>
       </div>
@@ -324,7 +324,7 @@
 
 
 
-<p class="js-qa js-qa-answer">一些<a href="/zh-hant/get-local-information/">地方衛生轄區</a>提供獨立於MyTurn的疫苗接種預約名額。</p>
+<p class="js-qa js-qa-answer">一些<a href="/zh-hant/get-local-information/">地方衛生轄區</a>提供獨立於My Turn的疫苗接種預約名額。</p>
 
 
 
@@ -364,7 +364,7 @@
 
 
 
-<p class="js-qa js-qa-answer">接種COVID-19疫苗后，您可能出現不良反應。這是您的身體正在建立免疫機制的正常現象。最常見的副作用是手臂接種處出現疼痛和腫脹症狀。此外，您還可能出現發燒、發冷、疲勞和頭痛等症狀。這些症狀可能會妨礙您從事日常活動，但這些症狀一般幾天后便會消失。詳細了解<a href="https://www.cdc.gov/coronavirus/2019-ncov/vaccines/expect/after.html">接種疫苗後的注意事項</a>。</p>
+<p class="js-qa js-qa-answer">接種COVID-19疫苗后，您可能出現不良反應。這是您的身體正在建立免疫機制的正常現象。最常見的副作用是手臂接種處出現疼痛和腫脹症狀。此外，您還可能出現發燒、發冷、疲勞和頭痛等症狀。這些症狀可能會妨礙您從事日常活動，但這些症狀一般幾天后便會消失。了解更多關於<a href="https://www.cdc.gov/coronavirus/2019-ncov/vaccines/expect/after.html">接種疫苗后可能出現的不良反應</a>。</p>
 
 
 
