--- a/ar/vaccines/index.html
+++ b/ar/vaccines/index.html
@@ -150,7 +150,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>اللقاحات</h1>
           
-            <p class="small-text">آخر التحديثات&nbsp;3:05 م الساعة 25 فبراير 2021</p>
+            <p class="small-text">آخر التحديثات&nbsp;3:51 م الساعة 25 فبراير 2021</p>
           
         </div>
       </div>
@@ -324,7 +324,7 @@
 
 
 
-<p class="js-qa js-qa-answer">وتوفر بعض <a href="/ar/get-local-information/">دوائر الصحة المحلية</a> مواعيد التطعيم بشكل منفصل عن MyTurn.</p>
+<p class="js-qa js-qa-answer">وتوفر بعض <a href="/ar/get-local-information/">دوائر الصحة المحلية</a> مواعيد التطعيم بشكل منفصل عن My Turn.</p>
 
 
 
@@ -364,7 +364,7 @@
 
 
 
-<p class="js-qa js-qa-answer">بعد التطعيم بلقاح كوفيد-19، قد تظهر عليك بعض الآثار الجانبية. هذه علامات طبيعية تدل على أن جسمك يبني مناعة. الآثار الجانبية الأكثر شيوعًا هي الألم والتورم في الذراع حيث موضع تلقيك الحقنة. بالإضافة إلى ذلك، قد تصاب بالحمى والقشعريرة والتعب والصداع. وقد تؤثر على قدرتك على القيام بالأنشطة اليومية، لكن يجب أن تختفي في غضون بضعة أيام قليلة. تعرف على المزيد حول <a href="https://www.cdc.gov/coronavirus/2019-ncov/vaccines/expect/after.html">ما يمكن توقعه بعد التطعيم.</a></p>
+<p class="js-qa js-qa-answer">بعد التطعيم بلقاح كوفيد-19، قد تظهر عليك بعض الآثار الجانبية. هذه علامات طبيعية على أن جسمك يبني مناعة. الآثار الجانبية الأكثر شيوعًا هي الألم والتورم في الذراع حيث موضع تلقيك الحقنة. بالإضافة إلى ذلك، قد تصاب بالحمى والقشعريرة والتعب والصداع. وقد تؤثر على قدرتك على القيام بالأنشطة اليومية، لكن يجب أن تختفي في غضون بضعة أيام قليلة. تعرف على المزيد حول <a href="https://www.cdc.gov/coronavirus/2019-ncov/vaccines/expect/after.html">ما يمكن توقعه بعد التطعيم.</a></p>
 
 
 
@@ -845,7 +845,7 @@
                 </button>
                 <div class="card-container" aria-hidden="true">
                   <div class="card-body">
-            <p>تشمل المكونات الموجودة في لقاحات كوفيد-19 المتوفرة حاليًا الحمض النووي الريبوزي المرسال والدهون والأملاح والسكريات وعوامل مقاومة لتغير الأس الهيدروجيني. تساعد العوامل المقاومة لتغير الأس الهيدروجيني في الحفاظ على استقرار الأس الهيدروجيني للمحلول. ويمكن أن تختلف مكونات اللقاح حسب الشركة المصنعة. لمعرفة المزيد عن مكونات لقاحات كوفيد-19 المصرح بها، راجع</p>
+            <p>تشمل المكونات الموجودة في لقاحات كوفيد-19 المتوفرة حاليًا الحمض النووي الريبوزي المرسال والدهون والأملاح والسكريات وعوامل مقاومة لتغير الأس الهيدروجيني. تساعد هذه العوامل في الحفاظ على استقرار الأس الهيدروجيني للمحلول. ويمكن أن تختلف مكونات اللقاح حسب الشركة المصنعة. لمعرفة المزيد عن مكونات لقاحات كوفيد-19 المصرح بها، راجع</p>
 <ul><li><a href="https://www.cdc.gov/coronavirus/2019-ncov/vaccines/different-vaccines/Pfizer-BioNTech.html">معلومات حول لقاح كوفيد-19 من Pfizer-BioNTech</a></li><li><a href="https://www.cdc.gov/coronavirus/2019-ncov/vaccines/different-vaccines/Moderna.html">معلومات حول لقاح كوفيد-19 من Moderna</a></li></ul>
 
                   </div>
@@ -929,7 +929,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>كم من الوقت يجب أن أنتظر للحصول على اللقاح بعد إصابتي بكوفيد-19؟</h4>
+            <h4>كم من الوقت يجب أن أنتظر للحصول على اللقاح بعد إصابتي بكوفيد-19 ؟</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true">
