--- a/vi/vaccines/index.html
+++ b/vi/vaccines/index.html
@@ -152,7 +152,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Vắc-xin</h1>
           
-            <p class="small-text">Cập nhật mới nhất&nbsp;25 tháng 2, 2021 lúc 15:05</p>
+            <p class="small-text">Cập nhật mới nhất&nbsp;25 tháng 2, 2021 lúc 15:51</p>
           
         </div>
       </div>
@@ -294,7 +294,7 @@
 
 
 
-<div style="display:none;" class="js-qa js-qa-question">Tôi có thể đặt lịch hẹn hoặc biết địa điểm tiêm vắc-xin COVID-19 bằng cách nào?</div>
+<div style="display:none;" class="js-qa js-qa-question">Làm thế nào để tôi có thể đặt lịch hẹn hoặc biết địa điểm tiêm vắc-xin COVID-19?</div>
 
 
 
@@ -306,7 +306,7 @@
 
 
 
-<p class="js-qa js-qa-answer">Nhân viên chăm sóc sức khỏe và những người từ 65 tuổi trở lên sống hoặc làm việc ở một số quận có thể đặt lịch hẹn trực tiếp trên trang <a href="https://myturn.ca.gov">myturn.ca.gov</a> hoặc bằng cách gọi số (833) 422-4255.</p>
+<p class="js-qa js-qa-answer">Nhân viên chăm sóc sức khỏe và những người từ 65 tuổi trở lên sống hoặc làm việc ở một số quận có thể đặt lịch hẹn ngay trên trang <a href="https://myturn.ca.gov">myturn.ca.gov</a> hoặc bằng cách gọi số (833) 422-4255.</p>
 
 
 
@@ -318,7 +318,7 @@
 
 
 
-<p>Công tác đặt lịch hẹn trực tuyến cho các nhóm khác và cư dân thuộc những quận khác sẽ sớm được triển khai trên toàn tiểu bang. Mọi người có thể đặt lịch hẹn bằng Tiếng Tây Ban Nha.</p>
+<p>Đặt lịch hẹn trực tuyến cho các nhóm khác và cư dân thuộc những quận khác sẽ sớm được triển khai trên toàn tiểu bang. Mọi người có thể đặt lịch hẹn bằng Tiếng Tây Ban Nha.</p>
 
 
 
@@ -326,7 +326,7 @@
 
 
 
-<p class="js-qa js-qa-answer">Một số <a href="/vi/get-local-information/">khu vực pháp lý y tế địa phương</a> cung cấp lịch hẹn tiêm vắc-xin riêng, không thông qua MyTurn.</p>
+<p class="js-qa js-qa-answer">Một số <a href="/vi/get-local-information/">cơ quan y tế có thẩm quyền của địa phương</a> cung cấp lịch hẹn tiêm vắc-xin riêng, không thông qua My Turn.</p>
 
 
 
@@ -366,7 +366,7 @@
 
 
 
-<p class="js-qa js-qa-answer">Sau khi chủng ngừa COVID-19, quý vị có thể gặp phải một số tác dụng phụ. Đây là dấu hiệu bình thường, cho biết cơ thể quý vị đang hình thành khả năng miễn dịch. Các tác dụng phụ thường gặp nhất là đau và sưng ở cánh tay ở vị trí tiêm. Ngoài ra, quý vị có thể bị sốt, ớn lạnh, mệt mỏi và đau đầu. Tác dụng phụ có thể ảnh hưởng đến khả năng thực hiện các hoạt động hàng ngày của quý vị nhưng sẽ hết sau vài ngày. Tìm hiểu thêm về <a href="https://www.cdc.gov/coronavirus/2019-ncov/vaccines/expect/after.html">những điều nên làm sau khi tiêm vắc-xin.</a></p>
+<p class="js-qa js-qa-answer">Sau khi chủng ngừa COVID-19, quý vị có thể gặp phải một số tác dụng phụ. Đây là dấu hiệu bình thường, cho biết cơ thể quý vị đang hình thành khả năng miễn dịch. Các tác dụng phụ thường gặp nhất là đau và sưng cánh tay ở vị trí tiêm. Ngoài ra, quý vị có thể bị sốt, ớn lạnh, mệt mỏi và đau đầu. Tác dụng phụ có thể ảnh hưởng đến khả năng thực hiện các hoạt động hàng ngày của quý vị nhưng sẽ hết sau vài ngày. Tìm hiểu thêm về <a href="https://www.cdc.gov/coronavirus/2019-ncov/vaccines/expect/after.html">những điều nên làm sau khi tiêm vắc-xin.</a></p>
 
 
 
@@ -458,7 +458,7 @@
 
 
 
-<p>Ban đầu, chủng ngừa được giới hạn ở các nhân viên chăm sóc sức khỏe và cư dân tại các cơ sở chăm sóc dài hạn. Do đó, dữ liệu phản ánh về nhóm dân số đó hơn là những cư dân khác tại California. Dữ liệu hiển thị tổng cộng số người đã tiêm cộng dồn và được cập nhật vào Thứ Năm hàng tuần.</p>    <!-- Vaccination by Groups Charts --> <cagov-county-search></cagov-county-search> <cagov-county-toggle-buttons-vaccines></cagov-county-toggle-buttons-vaccines> <cagov-chart-filter-buttons-vaccines class="js-re-smalls">     <div class="d-flex justify-content-center">       <button class="small-tab active" data-key="race-ethnicity">Chủng tộc và sắc tộc</button> <button class="small-tab" data-key="age">Tuổi tác</button> <button class="small-tab" data-key="gender">Giới tính</button>     </div> </cagov-chart-filter-buttons-vaccines>  <div class="container">
+<p>Ban đầu, chủng ngừa được giới hạn ở các nhân viên chăm sóc sức khỏe và cư dân tại các cơ sở chăm sóc dài hạn. Do đó, dữ liệu phản ánh nhóm dân số đó hơn là những cư dân khác tại California. Dữ liệu hiển thị tổng cộng số người đã tiêm cộng dồn và được cập nhật vào Thứ Năm hàng tuần.</p>    <!-- Vaccination by Groups Charts --> <cagov-county-search></cagov-county-search> <cagov-county-toggle-buttons-vaccines></cagov-county-toggle-buttons-vaccines> <cagov-chart-filter-buttons-vaccines class="js-re-smalls">     <div class="d-flex justify-content-center">       <button class="small-tab active" data-key="race-ethnicity">Chủng tộc và sắc tộc</button> <button class="small-tab" data-key="age">Tuổi tác</button> <button class="small-tab" data-key="gender">Giới tính</button>     </div> </cagov-chart-filter-buttons-vaccines>  <div class="container">
     <div class="row">         <cagov-chart-vaccination-groups-race-ethnicity class="chart">           <ul class="d-none">
             <li data-label="chartTitle">Những người được tiêm ít nhất một liều vắc-xin theo chủng tộc và sắc tộc ở California</li>
             <li data-label="chartTitleCounty">Những người được tiêm ít nhất một liều vắc-xin theo chủng tộc và sắc tộc ở [REGION]</li>
@@ -820,7 +820,7 @@
                 <div class="card-container" aria-hidden="true">
                   <div class="card-body">
             <p>Còn tùy. <a href="https://www.cdc.gov/coronavirus/2019-ncov/vaccines/safety/allergic-reaction.html">CDC khuyến nghị</a> rằng:</p>
-<ul><li>Nếu quý vị đã từng có phản ứng dị ứng nghiêm trọng với bất kỳ thành phần nào trong một loại vắc-xin COVID-19 cụ thể thì quý vị không nên tiêm loại vắc-xin đó.</li><li>Nếu quý vị có phản ứng dị ứng nghiêm trọng sau khi tiêm mũi đầu tiên, quý vị không nên tiêm mũi thứ hai.</li><li>Nếu quý vị có phản ứng dị ứng ngay lập tức—ngay cả khi không nghiêm trọng—với bất kỳ thành phần nào trong vắc-xin COVID-19 mRNA, quý vị không nên tiêm bất kỳ loại nào trong hai loại vắc-xin COVID-19 mRNA hiện nay.</li><li>Nếu quý vị có phản ứng dị ứng ngay sau khi tiêm liều vắc-xin COVID-19 mRNA đầu tiên, quý vị không nên tiêm liều thứ hai.  </li><li>Những người dị ứng với polyethylene glycol (PEG) hoặc polysorbate không nên tiêm vắc-xin COVID-19 mRNA.</li><li>Nếu quý vị đã có phản ứng dị ứng nghiêm trọng với các loại vắc-xin hoặc thuốc tiêm khác, quý vị nên hỏi bác sĩ xem quý vị có nên tiêm vắc-xin COVID-19 hay không.</li><li>Những người có tiền sử phản ứng dị ứng nghiêm trọng không liên quan đến vắc-xin hoặc thuốc tiêm vẫn có thể tiêm vắc-xin. Mọi người có thể tiêm vắc-xin ngay cả khi có:<ul><li>Tiền sử dị ứng với thuốc uống</li><li>Tiền sử gia đình bị phản ứng dị ứng nghiêm trọng</li><li>Dị ứng nhẹ hơn với vắc-xin</li></ul></li></ul>
+<ul><li>Nếu quý vị đã từng có phản ứng dị ứng nghiêm trọng với bất kỳ thành phần nào trong một loại vắc-xin COVID-19 cụ thể thì quý vị không nên tiêm loại vắc-xin đó.</li><li>Nếu quý vị có phản ứng dị ứng nghiêm trọng sau khi tiêm mũi đầu tiên, quý vị không nên tiêm mũi thứ hai.</li><li>Nếu quý vị có phản ứng dị ứng ngay lập tức—ngay cả khi không nghiêm trọng—với bất kỳ thành phần nào trong vắc-xin COVID-19 mRNA, quý vị không nên tiêm bất kỳ loại nào trong hai loại vắc-xin COVID-19 mRNA hiện nay.</li><li>Nếu quý vị có phản ứng dị ứng ngay sau khi tiêm liều vắc-xin COVID-19 mRNA đầu tiên, quý vị không nên tiêm liều thứ hai.  </li><li>Những người dị ứng với polyethylene glycol (PEG) hoặc polysorbate không nên tiêm vắc-xin COVID-19 mRNA.</li><li>Nếu quý vị đã có phản ứng dị ứng nghiêm trọng với các loại vắc-xin hoặc thuốc tiêm khác, quý vị nên hỏi bác sĩ xem quý vị có nên tiêm vắc-xin COVID-19 hay không.</li><li>Những người có tiền sử phản ứng dị ứng nghiêm trọng không liên quan đến vắc-xin hoặc thuốc tiêm vẫn có thể tiêm vắc-xin. Mọi người có thể tiêm vắc-xin ngay cả khi có:<ul><li>Tiền sử dị ứng với thuốc uống</li><li>Tiền sử gia đình bị phản ứng dị ứng nghiêm trọng</li><li>Dị ứng nhẹ hơn với các vắc-xin</li></ul></li></ul>
 
                   </div>
                 </div>
@@ -909,7 +909,7 @@
                 <div class="card-container" aria-hidden="true">
                   <div class="card-body">
             <p>Có. <a href="https://www.cdc.gov/coronavirus/2019-ncov/vaccines/recommendations/pregnancy.html">CDC khuyến nghị</a> rằng nếu quý vị đang mang thai, quý vị có thể chọn tiêm vắc-xin khi có sẵn vắc-xin cho quý vị. Hiện không có bằng chứng nào cho thấy các kháng thể được hình thành từ việc chủng ngừa COVID-19 gây ra bất kỳ vấn đề nào đối với việc mang thai, bao gồm cả sự phát triển của nhau thai.</p>
-<p>Những người đang cố gắng mang thai ngay bây giờ hoặc những người dự định mang thai trong tương lai cũng có thể được tiêm vắc-xin COVID-19 khi có sẵn cho họ. Không có bằng chứng nào cho thấy các vấn đề về khả năng sinh sản là tác dụng phụ của bất kỳ loại vắc-xin nào, kể cả vắc-xin COVID-19. Không có khuyến nghị thường quy nào về việc xét nghiệm thử thai trước khi quý vị tiêm vắc-xin COVID-19. Nếu quý vị có thắc mắc về việc tiêm vắc-xin, hãy trao đổi với nhà cung cấp dịch vụ chăm sóc sức khỏe để giúp quý vị đưa ra quyết định sáng suốt.</p>
+<p>Những người đang cố gắng mang thai ngay bây giờ hoặc những người dự định mang thai trong tương lai cũng có thể tiêm vắc-xin COVID-19 khi có sẵn cho họ. Không có bằng chứng nào cho thấy các vấn đề về khả năng sinh sản là tác dụng phụ của bất kỳ loại vắc-xin nào, kể cả vắc-xin COVID-19. Không có khuyến nghị thường quy nào về việc xét nghiệm thử thai trước khi quý vị tiêm vắc-xin COVID-19. Nếu quý vị có thắc mắc về việc tiêm vắc-xin, hãy trao đổi với nhà cung cấp dịch vụ chăm sóc sức khỏe để giúp quý vị đưa ra quyết định sáng suốt.</p>
 
                   </div>
                 </div>
@@ -1102,7 +1102,7 @@
 
 
 
-<ul><li>CDPH: <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Covid19Vaccines.aspx"></a><a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Covid19Vaccines.aspx">Vắc-xin COVID-19 (Bệnh do Vi-rút Corona 2019)</a></li><li>CDPH: <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/Immunization/COVID-19Vaccine.aspx">Chương Trình Chủng Ngừa COVID-19 của California</a></li><li>CDPH: <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/COVID-Variants.aspx">Theo Dõi Các Biến Thể (West Coast Strain)</a></li><li>CDC: <a title="CDC.gov Vắc-xin COVID-19" href="https://www.cdc.gov/coronavirus/2019-ncov/vaccines/index.html">Vắc-xin COVID-19</a></li><li>CDC: <a href="https://www.cdc.gov/coronavirus/2019-ncov/vaccines/keythingstoknow.html">Những Điều Quan Trọng cần Biết về Vắc-xin COVID-19</a></li><li>CDC: <a href="https://www.cdc.gov/vaccines/covid-19/index.html">Chủng Ngừa COVID-19</a></li></ul>
+<ul><li>CDPH: <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Covid19Vaccines.aspx"></a><a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Covid19Vaccines.aspx">Vắc-xin COVID-19 (Bệnh do Vi-rút Corona 2019)</a></li><li>CDPH: <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/Immunization/COVID-19Vaccine.aspx">Chương Trình Chủng Ngừa COVID-19 của California</a></li><li>CDPH: <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/COVID-Variants.aspx">Theo Dõi Các Biến Thể (Chủng West Coast)</a></li><li>CDC: <a title="CDC.gov Vắc-xin COVID-19" href="https://www.cdc.gov/coronavirus/2019-ncov/vaccines/index.html">Vắc-xin COVID-19</a></li><li>CDC: <a href="https://www.cdc.gov/coronavirus/2019-ncov/vaccines/keythingstoknow.html">Những Điều Quan Trọng cần Biết về Vắc-xin COVID-19</a></li><li>CDC: <a href="https://www.cdc.gov/vaccines/covid-19/index.html">Chủng Ngừa COVID-19</a></li></ul>
 
 
 
