Update translation - 103540969 (#3476) 7d9486df82d4a1d1b65c1192e6cae205eab192f5

--- a/tl/education/index.html
+++ b/tl/education/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Edukasyon</h1>
           
-            <p class="small-text">Huling na-update&nbsp;Pebrero 22, 2021 sa 6:48 PM</p>
+            <p class="small-text">Huling na-update&nbsp;Pebrero 26, 2021 sa 12:16 PM</p>
           
         </div>
       </div>
@@ -167,7 +167,31 @@
 
 
 
-<h2 id="questions">K-12</h2>
+<p>Sa page na ito, makikita mo ang sumusunod:</p>
+
+
+
+<ul><li><a href="#vaccines-for-educators">Mga bakuna para sa staff ng K-12 na paaralan at provider ng childcare</a></li><li><a href="#k-12-guidance">Gabay sa K-12</a></li><li><a href="#higher-education-guidance" data-type="internal" data-id="#higher-education-guidance">Gabay sa mas mataas na edukasyon</a></li></ul>
+
+
+
+<h2 id="vaccines-for-educators">Paglalaan ng bakuna para sa staff ng K-12 na paaralan at childcare.</h2>
+
+
+
+<p>Magagawa ng mga guro at provider ng childcare na wala pang 65 taong gulang na  mag-book ng appointment sa <a href="https://myturn.ca.gov/">myturn.ca.gov</a> gamit ang isang espesyal na code. Nakikipagtulungan ang Estado ng California sa mga lokal na organisasyon sa edukasyon at childcare para ipamahagi ang mga code na ito. Matuto pa tungkol sa <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/K-12_Vaccines_Overview.pdf">plano sa paglalaan ng bakuna para sa staff ng K-12 na paaralan at childcare</a>.</p>
+
+
+
+<p>Kwalipikado ang mga manggagawa sa edukasyon para sa pinabilis na appointment kung sila ay: </p>
+
+
+
+<ul><li>Isang guro (kasama ang mga kahaliling guro), paraprofessional, driver ng bus, manggagawa sa serbisyo sa pagkain, manggagawa sa custodial na serbisyo, o administrator sa lugar</li><li>Kasalukuyang nagtatrabaho nang personal o nakaiskedyul na bumalik sa susunod na 21 araw<ul><li>Para mapabilis ang pagbubukas ng paaralan, posibleng palawigin ang 21 araw na palugit batay sa supply ng bakuna at priyoridad sa mga kwalipikadong trabaho</li></ul></li><li>Nagtatrabaho sa isang paaralan o lugar ng trabaho na namamahagi ng mga meal o nagbibigay sa mga mag-aaral ng access sa teknolohiya</li></ul>
+
+
+
+<h2 id="k-12-guidance">K-12</h2>
 
 
 
@@ -211,7 +235,7 @@
 
 
 
-<h2>Mas mataas na edukasyon</h2>
+<h2 id="higher-education-guidance">Mas mataas na edukasyon</h2>
 
 
 
