--- a/vi/education/index.html
+++ b/vi/education/index.html
@@ -150,7 +150,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Giáo dục</h1>
           
-            <p class="small-text">Cập nhật mới nhất&nbsp;22 tháng 2, 2021 lúc 18:48</p>
+            <p class="small-text">Cập nhật mới nhất&nbsp;26 tháng 2, 2021 lúc 24:16</p>
           
         </div>
       </div>
@@ -169,7 +169,31 @@
 
 
 
-<h2 id="questions">Khối Mầm Non - Lớp 12</h2>
+<p>Trên trang này, quý vị sẽ thấy thông tin về:</p>
+
+
+
+<ul><li><a href="#vaccines-for-educators">Vắc-xin cho nhân viên trường học K-12 và nhà cung cấp địch vụ chăm sóc trẻ em</a></li><li><a href="#k-12-guidance">Hướng dẫn K-12</a></li><li><a href="#higher-education-guidance" data-type="internal" data-id="#higher-education-guidance">Hướng dẫn giáo dục đại học</a></li></ul>
+
+
+
+<h2 id="vaccines-for-educators">Kế hoạch phân bổ vắc-xin cho nhân viên trường học K-12 và dịch vụ chăm sóc trẻ em</h2>
+
+
+
+<p>Các nhà giáo dục và các nhà cung cấp dịch vụ chăm sóc trẻ em dưới 65 tuổi sẽ có thể đặt lịch hẹn trên <a href="https://myturn.ca.gov/">myturn.ca.gov</a> kèm theo một mã đặc biệt. Tiểu Bang California đang làm việc với các tổ chức giáo dục và chăm sóc trẻ em địa phương để phân phối các mã này. Tìm hiểu thêm về <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/K-12_Vaccines_Overview.pdf">kế hoạch phân bổ vắc-xin cho nhân viên trường học K-12 và dịch vụ chăm sóc trẻ em</a>.</p>
+
+
+
+<p>Nhân viên giáo dục đủ điều kiện đặt lịch hẹn gấp nếu họ: </p>
+
+
+
+<ul><li>Là giáo viên (bao gồm cả giáo viên dạy thay), trợ lý giảng dạy, tài xế xe buýt, nhân viên dịch vụ thực phẩm, nhân viên dịch vụ trông coi hoặc nhân viên quản lý hành chính tại cơ sở</li><li>Hiện đang làm việc trực tiếp hoặc sắp quay lại làm việc trong 21 ngày tới<ul><li>Để đẩy nhanh việc mở cửa trở lại các trường học, khoảng thời gian 21 ngày có thể được kéo dài dựa vào nguồn cung cấp vắc-xin sẵn có và mức độ ưu tiên giữa các ngành nghề đủ điều kiện</li></ul></li><li>Báo cáo cho một trường học hoặc cơ sở cung cấp bữa ăn hoặc cung cấp quyền truy cập công nghệ cho học sinh</li></ul>
+
+
+
+<h2 id="k-12-guidance">Khối Mầm Non - Lớp 12</h2>
 
 
 
@@ -213,7 +237,7 @@
 
 
 
-<h2>Giáo dục đại học</h2>
+<h2 id="higher-education-guidance">Giáo dục đại học</h2>
 
 
 
