--- a/ar/education/index.html
+++ b/ar/education/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>التعليم</h1>
           
-            <p class="small-text">آخر التحديثات&nbsp;6:48 م الساعة 22 فبراير 2021</p>
+            <p class="small-text">آخر التحديثات&nbsp;12:16 م الساعة 26 فبراير 2021</p>
           
         </div>
       </div>
@@ -167,7 +167,31 @@
 
 
 
-<h2 id="questions">من صف رياض الأطفال إلى الصف الثاني عشر</h2>
+<p>ستجد في هذه الصفحة ما يلي:</p>
+
+
+
+<ul><li><a href="#vaccines-for-educators">لقاحات لموظفي المدارس من رياض الأطفال وحتى الصف 12 ومقدمي خدمات رعاية الطفل</a></li><li><a href="#k-12-guidance">للمدارس من رياض الأطفال وحتى الصف 12</a></li><li><a href="#higher-education-guidance" data-type="internal" data-id="#higher-education-guidance">الدليل الإرشادي للتعليم العالي</a></li></ul>
+
+
+
+<h2 id="vaccines-for-educators">تخصيص اللقاحات لموظفي المدارس K-12 ومقدمي خدمات رعاية الأطفال</h2>
+
+
+
+<p>سيتمكن المعلمون ومقدمو خدمات رعاية الأطفال الذين تقل أعمارهم عن 65 عامًا من حجز موعد على <a href="https://myturn.ca.gov/">myturn.ca.gov</a> باستخدام رمز خاص. وتعمل ولاية كاليفورنيا بالتعاون مع مؤسسات التعليم ورعاية الأطفال المحلية لتوزيع هذه الرموز. تعرف على المزيد عن<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/K-12_Vaccines_Overview.pdf">خطة تخصيص اللقاحات لموظفي المدارس K-12 ومقدمي خدمات رعاية الأطفال</a>.</p>
+
+
+
+<p>يحق للعاملين في مجال التعليم الحصول على موعد عاجل إذا كانوا: </p>
+
+
+
+<ul><li>مدرسين (بما في ذلك المدرسين البدلاء) أو مساعدي المهنيين أو سائقي حافلات أو عاملين بخدمات تقديم الطعام أو عاملين بخدمات الرعاية الوصائية، أو مديري مواقع</li><li>يعملون حاليًا من خلال التواجد في مكان العمل أو من المقرر أن يعودوا إليه في غضون 21 يومًا القادمة<ul><li>وللتعجيل بإعادة فتح المدارس، قد يتم تمديد فترة 21 يومًا بناءً على إمدادات اللقاح المتاحة وأولوية توزيعه على المهن المؤهلة</li></ul></li><li>إبلاغ المدرسة أو موقع العمل بتوزيع وجبات الطعام أو إتاحة وصول الطلاب إلى التكنولوجيا</li></ul>
+
+
+
+<h2 id="k-12-guidance">من صف رياض الأطفال إلى الصف 12</h2>
 
 
 
@@ -211,7 +235,7 @@
 
 
 
-<h2>التعليم العالي</h2>
+<h2 id="higher-education-guidance">التعليم العالي</h2>
 
 
 
@@ -223,7 +247,7 @@
 
 
 
-<p>اطلع على كيفية مواجهة كليتك أو جامعتك لمرض COVID-19:</p>
+<p>اطلع على كيفية مواجهة كليتك أو جامعتك لمرض كوفيد-19:</p>
 
 
 
