--- a/es/education/index.html
+++ b/es/education/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Educación</h1>
           
-            <p class="small-text">Última actualización&nbsp;22 de febrero de 2021 a las 6:48 p. m.</p>
+            <p class="small-text">Última actualización&nbsp;26 de febrero de 2021 a las 12:16 p. m.</p>
           
         </div>
       </div>
@@ -167,7 +167,31 @@
 
 
 
-<h2 id="questions">K-12</h2>
+<p>En esta página encontrará:</p>
+
+
+
+<ul><li><a href="#vaccines-for-educators">vacunas para el personal escolar de jardín de niños a 12.º grado (K-12) y proveedores de cuidado infantil</a></li><li><a href="#k-12-guidance">guía para escuelas K-12</a></li><li><a href="#higher-education-guidance" data-type="internal" data-id="#higher-education-guidance">guía para educación superior</a></li></ul>
+
+
+
+<h2 id="vaccines-for-educators">Asignación de vacunas para el personal de escuelas K-12 y de cuidado infantil</h2>
+
+
+
+<p>Los educadores y los proveedores de cuidado infantil menores de 65 años podrán reservar una cita en <a href="https://myturn.ca.gov/">myturn.ca.gov</a> con un código especial. El estado de California está trabajando con organizaciones locales de educación y cuidado infantil para distribuir estos códigos. Obtenga más información sobre<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/K-12_Vaccines_Overview.pdf"> el plan de asignación de vacunas para el personal de escuelas K-12 y de cuidado infantil</a>.</p>
+
+
+
+<p>Los trabajadores de la educación califican para una cita acelerada si: </p>
+
+
+
+<ul><li>Son maestros (incluidos los maestros sustitutos), paraprofesionales, conductores de autobús, trabajadores del servicio de alimentos, trabajadores del servicio de conserjería o administradores del plantel.</li><li>Actualmente trabajan en persona o tienen programado regresar en los próximos 21 días.<ul><li>Para acelerar la reapertura de las escuelas, la ventana de 21 días puede extenderse según el suministro de vacunas disponible y la prioridad en las ocupaciones elegibles.</li></ul></li><li>Le reportan a una escuela o lugar de trabajo distribuyendo comidas o proporcionando acceso a la tecnología a los estudiantes.</li></ul>
+
+
+
+<h2 id="k-12-guidance">K-12</h2>
 
 
 
@@ -211,7 +235,7 @@
 
 
 
-<h2>Educación superior</h2>
+<h2 id="higher-education-guidance">Educación superior</h2>
 
 
 
