--- a/zh-hans/education/index.html
+++ b/zh-hans/education/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>教育</h1>
           
-            <p class="small-text">最后更新时间&nbsp;2021年2月22日, 下午6:48</p>
+            <p class="small-text">最后更新时间&nbsp;2021年2月26日, 下午12:16</p>
           
         </div>
       </div>
@@ -167,7 +167,31 @@
 
 
 
-<h2 id="questions">K-12学校</h2>
+<p>您将在本页面中了解以下内容：</p>
+
+
+
+<ul><li><a href="#vaccines-for-educators">为K-12学校教职工和托儿服务提供者提供的疫苗</a></li><li><a href="#k-12-guidance">K-12指引</a></li><li><a href="#higher-education-guidance" data-type="internal" data-id="#higher-education-guidance">高等教育指引</a></li></ul>
+
+
+
+<h2 id="vaccines-for-educators">K-12学校教职工及托儿工作者疫苗分配计划</h2>
+
+
+
+<p>65岁以下的教育工作者和托儿服务提供者可以通过访问<a href="https://myturn.ca.gov/">myturn.ca.gov</a>，输入专用码以进行预约。加州政府正在与地方教育和托儿机构合作发放这些代码。详细了解<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/K-12_Vaccines_Overview.pdf">K-12学校教职工及托儿工作者疫苗分配计划</a>。</p>
+
+
+
+<p>符合以下条件的教育工作者有资格更快地预约接种： </p>
+
+
+
+<ul><li>担任教师（包括代课教师）、助教、校车司机、餐饮服务人员、监护服务人员或学校行政人员</li><li>目前在现场工作或计划在未来21天内返岗<ul><li>为了加快学校重新开放，根据现有疫苗供应量和符合资格的职业的优先接种顺序，21天期限可以延长</li></ul></li><li>到学校或工作场所为学生分配餐食或提供技术服务</li></ul>
+
+
+
+<h2 id="k-12-guidance">K-12学校</h2>
 
 
 
@@ -211,7 +235,7 @@
 
 
 
-<h2>高等教育</h2>
+<h2 id="higher-education-guidance">高等教育</h2>
 
 
 
