--- a/zh-hant/education/index.html
+++ b/zh-hant/education/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>教育</h1>
           
-            <p class="small-text">最近更新&nbsp;2021年2月22日, 下午6:48</p>
+            <p class="small-text">最近更新&nbsp;2021年2月26日, 下午12:16</p>
           
         </div>
       </div>
@@ -167,7 +167,31 @@
 
 
 
-<h2 id="questions">K-12學校</h2>
+<p>您將在本頁面中了解以下內容：</p>
+
+
+
+<ul><li><a href="#vaccines-for-educators">為K-12學校教職工和托兒服務提供者提供的疫苗</a></li><li><a href="#k-12-guidance">K-12指引</a></li><li><a href="#higher-education-guidance" data-type="internal" data-id="#higher-education-guidance">高等教育指引</a></li></ul>
+
+
+
+<h2 id="vaccines-for-educators">K-12學校教職工及托兒工作者疫苗分配計劃</h2>
+
+
+
+<p>65歲以下的教育工作者和托兒服務提供者可以造訪<a href="https://myturn.ca.gov/">myturn.ca.gov</a>，輸入專用碼以進行預約。加州政府正與地方教育和托兒機構合作發放這些代碼。詳細了解<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/K-12_Vaccines_Overview.pdf">K-12學校教職工及托兒工作者疫苗分配計劃</a>。</p>
+
+
+
+<p>符合以下條件的教育工作者有資格更快地預約接種：</p>
+
+
+
+<ul><li>擔任教師（包括代課教師）、助教、校車司機、餐飲服務人員、監護服務人員或學校行政人員</li><li>目前在現場工作或計劃在未來21天內返崗<ul><li>為了加快學校重新開放，可根據現有疫苗供應量和符合資格的職業的優先接種順序，延長21天期限</li></ul></li><li>到學校或工作場所為學生分配餐食或提供技術服務</li></ul>
+
+
+
+<h2 id="k-12-guidance">K-12學校</h2>
 
 
 
@@ -211,7 +235,7 @@
 
 
 
-<h2>高等教育</h2>
+<h2 id="higher-education-guidance">高等教育</h2>
 
 
 
