ADD pages/guidancefeed/cdph/20e1abd843a22370326b8d7956a96dc7.html a097b2dcd756f78773b95c0c42484f76c038719f

--- a/ko/latest-news/index.html
+++ b/ko/latest-news/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>COVID-19에 대한 최신 뉴스</h1>
           
-            <p class="small-text">최종 갱신 일자&nbsp;2021년 3월 1일 오후 1:22</p>
+            <p class="small-text">최종 갱신 일자&nbsp;2021년 3월 1일 오후 1:36</p>
           
         </div>
       </div>
@@ -163,6 +163,14 @@
           </h2>
           <p class="card-text" lang="en-US"><small class="text-muted"><!--46491 -->March 1, 2021</small></p>
           <div class="card-text" lang="en-US">SACRAMENTO – Governor Gavin Newsom, Senate President pro Tempore Toni G. Atkins and Assembly Speaker Anthony Rendon today highlighted an agreement on a $6.6 billion budget package to accelerate the safe return to in-pers...</div>
+        </div>
+      </div> <div class="card border-0 border-bottom rounded-0" lang="en-US">
+        <div class="card-body pl-0" lang="en-US">
+          <h2 class="card-title lead" lang="en-US">
+            <a href="https://www.cdph.ca.gov/Programs/OPA/Pages/NR21-069.aspx" lang="en-US" hreflang="en-US" rel="external">State Officials Announce Latest COVID-19 Facts&nbsp;(#339)</a>
+          </h2>
+          <p class="card-text" lang="en-US"><small class="text-muted"><!--20e1abd843a22370326b8d7956a96dc7 -->February 28, 2021</small></p>
+          <div class="card-text" lang="en-US">Today, the California Department of Public Health (CDPH) released the most recent statistics on COVID-19.</div>
         </div>
       </div> <div class="card border-0 border-bottom rounded-0" lang="en-US">
         <div class="card-body pl-0" lang="en-US">
