Update page - video-section.json 62e1b836655b2c986d9ea95bcc1e4d1efc87ca00

--- a/vaccines/index.html
+++ b/vaccines/index.html
@@ -150,7 +150,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Vaccines</h1>
           
-            <p class="small-text">Last updated&nbsp;February 28, 2021 at 12:59 PM</p>
+            <p class="small-text">Last updated&nbsp;March 1, 2021 at 5:08 PM</p>
           
         </div>
       </div>
@@ -217,6 +217,10 @@
 
 
 <p class="js-qa js-qa-answer">Every Californian can sign up at <a href="https://myturn.ca.gov">myturn.ca.gov</a> or call (833) 422-4255 to see if it&#8217;s their turn to get the COVID-19 vaccine. If you’re not currently eligible or if there are no open appointments, you can sign up to be notified when it’s your turn.</p>
+
+
+
+<blockquote class="wp-block-quote"><p><a href="https://vaccinefinder.org/" class="action-link pt-3 pb-3 px-4"><strong>Check your eligibility</strong></a></p></blockquote>
 
 
 
