Update page - vaccines.html 5802c6aa0055915da909add8a89818c434d6f9d4

--- a/vaccines/index.html
+++ b/vaccines/index.html
@@ -150,7 +150,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Vaccines</h1>
           
-            <p class="small-text">Last updated&nbsp;March 2, 2021 at 5:59 AM</p>
+            <p class="small-text">Last updated&nbsp;March 2, 2021 at 7:07 AM</p>
           
         </div>
       </div>
@@ -220,7 +220,7 @@
 
 
 
-<blockquote class="wp-block-quote"><p><a href="https://vaccinefinder.org/" class="action-link pt-3 pb-3 px-4"><strong>Check your eligibility</strong></a></p></blockquote>
+<blockquote class="wp-block-quote"><p><a href="https://myturn.ca.gov/" class="action-link pt-3 pb-3 px-4"><strong>Check your eligibility</strong></a></p></blockquote>
 
 
 
@@ -343,7 +343,7 @@
 
 
 
-<blockquote class="wp-block-quote"><p><a href="https://vaccinefinder.org/" class="action-link pt-3 pb-3 px-4"><strong>Schedule your vaccination appointment </strong></a></p></blockquote>
+<blockquote class="wp-block-quote"><p><a href="https://myturn.ca.gov/" class="action-link pt-3 pb-3 px-4"><strong>Schedule your vaccination appointment </strong></a></p></blockquote>
 
 
 
