Update page - video-section.json 99cfd459e0d6b09981d07397d5e887e7ffa76480

--- a/vi/index.html
+++ b/vi/index.html
@@ -522,7 +522,7 @@
 					</a>
 				</article>
 
-				<a href="https://toolkit.covid19.ca.gov" class="link-arrow-blue mt-4" data-video="f4tD3CwDQAc">
+				<a href="https://toolkit.covid19.ca.gov/partners/#vaccinateall58" class="link-arrow-blue mt-4" data-video="f4tD3CwDQAc">
 					<div class="link-arrow-label">More video messages</div>
 					<cagov-arrow></cagov-arrow>
 				</a>
