--- a/index.html
+++ b/index.html
@@ -514,7 +514,7 @@
 					</a>
 				</article>
 
-				<a href="https://toolkit.covid19.ca.gov" class="link-arrow-blue mt-4" data-video="f4tD3CwDQAc">
+				<a href="https://toolkit.covid19.ca.gov/partners/#vaccinateall58" class="link-arrow-blue mt-4" data-video="f4tD3CwDQAc">
 					<div class="link-arrow-label">More video messages</div>
 					<cagov-arrow></cagov-arrow>
 				</a>
